fixed text wrap problem on ShoppingItem

--- a/src/Model/components/ShoppingItem/ShoppingItem.css
+++ b/src/Model/components/ShoppingItem/ShoppingItem.css
@@ -11,7 +11,7 @@
     -fx-background-insets: 5px;
 }
 .selected {
-    -fx-background-color: #EBEBEB;
+    -fx-background-color: #d2d2d2;
     -fx-background-radius: 10;
     -fx-border-type: solid;
     -fx-border-width: 3;
